# edicpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.conf  uninstall.sh  version.hpp.in
src/: edi.cpp  term.cpp
src/include/: config.hpp  edi.hpp  term.hpp
